tests/typecheck/good/pm5.scilexp
let b = False in
match b with
| True => tfun 'A => Uint32 0
| False => tfun 'B => Uint32 0
end
